--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
 attrs==25.3.0
 beautifulsoup4==4.13.3
+blinker==1.9.0
+category_encoders==2.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 cloudscraper==1.2.71
+exceptiongroup==1.2.2
+Flask==3.1.0
+git-filter-repo==2.47.0
+greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.4.2
+MarkupSafe==3.0.2
 numpy==2.2.4
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
+patsy==1.0.1
+playwright==1.51.0
+pyee==12.1.1
 pyparsing==3.2.3
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
@@ -16,11 +30,16 @@ python-dotenv==1.1.0
 pytz==2025.2
 requests==2.32.3
 requests-toolbelt==1.0.0
+scikit-learn==1.6.1
+scipy==1.15.2
 selenium==4.30.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
+statsmodels==0.14.4
+threadpoolctl==3.6.0
+tqdm==4.67.1
 trio==0.29.0
 trio-websocket==0.12.2
 typing_extensions==4.13.0
@@ -28,4 +47,5 @@ tzdata==2025.2
 urllib3==2.3.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+Werkzeug==3.1.3
 wsproto==1.2.0
