--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,53 @@
-altair==5.5.0
-asyncio==3.4.3
-attrs==25.3.0
-beautifulsoup4==4.13.3
-blinker==1.9.0
-cachetools==5.5.2
-category_encoders==2.8.1
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-cloudscraper==1.2.71
-contourpy==1.3.1
-cycler==0.12.1
-Flask==3.1.0
-fonttools==4.57.0
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-h11==0.14.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.4.2
-jsonify==0.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-narwhals==1.35.0
-numpy==2.2.4
-outcome==1.3.0.post0
+# Core Python Libraries
 pandas==2.2.3
-patsy==1.0.1
-pillow==11.1.0
-playwright==1.51.0
-protobuf==5.29.4
-psutil==5.9.8
-ptyprocess==0.7.0
-pyarrow==19.0.1
-pydeck==0.9.1
-pyee==12.1.1
-pyparsing==3.2.3
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-referencing==0.36.2
-requests==2.32.3
-requests-toolbelt==1.0.0
-rpds-py==0.24.0
+numpy==2.0.2
 scikit-learn==1.6.1
-scipy==1.15.2
+joblib==1.4.2
+python-dotenv==1.0.1
+category_encoders==2.8.1
+
+# FastAPI & ASGI Server
+fastapi==0.115.4
+uvicorn==0.32.0
+jinja2==3.0.2  # If using templates
+python-multipart==0.0.12  # If handling file uploads
+
+# Visualization (optional)
+matplotlib==3.9.2
 seaborn==0.13.2
-selenium==4.30.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-statsmodels==0.14.4
-streamlit==1.44.1
-tenacity==9.1.2
-threadpoolctl==3.6.0
-toml==0.10.2
-tornado==6.4
-tqdm==4.67.1
-trio==0.29.0
-trio-websocket==0.12.2
-tzdata==2025.2
-undetected-chromedriver==3.5.5
-urllib3==2.3.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-wsproto==1.2.0
+altair==5.4.1
+plotly==5.19.0
+
+# Web & API Tools
+requests==2.31.0
+httpx==0.27.0
+
+# NLP / Text (optional)
+nltk==3.9.1
+yake==0.4.8
+vaderSentiment==3.3.2
+
+# Frontend UI (if Streamlit is used)
+streamlit==1.39.0
+streamlit_folium==0.23.1
+
+# Cloud / Utility (optional)
+boto3==1.35.48
+openpyxl==3.1.5
+
+# Audio / PDF (optional)
+pydub==0.25.1
+gTTS==2.5.4
+pdfplumber==0.11.5
+pytesseract==0.3.13
+
+# Geospatial (optional)
+folium==0.17.0
+geopy==2.4.1
+geopandas==1.0.1
+pyproj==3.7.0
+
+# Others
+regex==2024.11.6
+shapely==2.0.6
+pyarrow==17.0.0
